--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="assets/scripts/jquery-1.11.1.js"></script>
     <script type="text/javascript" src="assets/scripts/bootstrap.js"></script>
     <script type="text/javascript" src="assets/scripts/main.js"></script>
