--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <p>
                         Copyright 2015 Stevo Strackovski
                     </p>
-                    <p><a href="#">Legal information</a></p>
+                    <p><a href="#">Legal</a></p>
                 </div>
             </div>
         </div>
