--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <nav class="mobile-nav">
     <div class="inner-header">
         <ul>
-            <li>
+            <li class="pull-left">
                 <a class="logo" href=""><img src="assets/images/sig-1.png" alt="nv3 logo"/></a>
             </li>
-            <li class="pull-right always-right">
-                <a class="nav-open" href="">
+            <li class="pull-right">
+                <a class="nav-open" href="#">
                     <div class="nav-btn">
                         <div class="line line1"></div>
                         <div class="line line2"></div>
