--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <nav class="mobile-nav">
     <div class="inner-header">
         <ul>
-            <li class="pull-left">
-                <a class="logo" href=""><img src="assets/images/sig-1.png" alt="nv3 logo"/></a>
+            <li class="pull-left active">
+                <a class="logo go t0" href="index.html"><img src="assets/images/sig-1.png" alt="nv3 logo"/></a>
             </li>
             <li class="pull-right">
                 <a class="nav-open" href="#">
@@ -261,7 +261,7 @@
 <footer class="shown-footer">
     <div class="inner-footer">
         <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-4 footer-nav">
                 <ul>
                     <li>
                         <a href="#" class="go t1">Gallery</a>
@@ -278,16 +278,19 @@
                 <a href="#" class="open_signup">
                 <i class="fa fa-angle-up fa-2x"></i>
                 <br/>
-                GET NOTIFIED ABOUT
-                <br/>
-                NEW ADDITIONS
+                GET NOTIFIED
+                    <span class="selective">
+                        ABOUT
+                        <br/>
+                        NEW ADDITIONS
+                    </span>
                 </a>
             </div>
             <div class="col-xs-4 text-right">
 
                 <img class="stamp stamp1 shown-stamp" src="assets/images/logo-stamp.png" alt="Logo Stamp"/>
                 <img class="stamp stamp2" src="assets/images/logo-stamp2.png" alt="Logo Stamp"/>
-                <div class="legal">
+                <div class="legal selective">
                     <p>
                         Copyright 2015 Stevo Strackovski
                     </p>
