--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
 </div>
 
 <script type="text/javascript" src="assets/scripts/jquery-1.11.1.js"></script>
+<script type="text/javascript" src="assets/scripts/jquery.mobile.custom.js"></script>
 <script type="text/javascript" src="assets/scripts/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="assets/scripts/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="assets/scripts/jquery.contentcarousel.js"></script>
