--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <a href="#" class="go t2">About</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#" class="t3">Contact</a>
                     </li>
                 </ul>
             </div>
