--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <div class="bg bgh"></div>
 <img class="bg bg1 shown-bg" src="assets/images/bg1-4.png" alt="bg"/>
-<img class="bg bg2" src="assets/images/bg2-6.png" alt="bg"/>
+<img class="bg bg2" src="assets/images/bg2-4.png" alt="bg"/>
 <img src="assets/images/bg1-brush.png" class="brush shown-brush" alt=""/>
 
 <div class="mobile-overlay"></div>
@@ -295,7 +295,7 @@
                     <p>
                         Copyright 2015 Stevo Strackovski
                     </p>
-                    <p><a href="#">Legal</a></p>
+                    <p><a href="#" class="t4">Legal</a></p>
                 </div>
             </div>
         </div>
@@ -310,6 +310,20 @@
     </div>
 </div>
 <div class="signup form-style">
+    <div class="sub-success">
+        <p>
+            Thank you for subscribing.
+            <br/>
+            You will get notified when new drawings arrive.
+        </p>
+    </div>
+    <div class="sub-fail">
+        <p>
+            Something went wrong.
+            <br/>
+            Please try again later.
+        </p>
+    </div>
     <a href="#" class="close_signup">
         <i class="fa fa-angle-down fa-2x"></i>
     </a>
@@ -321,32 +335,56 @@
 
     <form method="post" action="#" id="signup-form">
         <div class="form-group">
-            <input type="text" class="form-control" id="user_email" placeholder="my@email.com" onfocus="this.placeholder = ''" onblur="this.placeholder = 'my@email.com'" value=""/>
-            <span class="error-msg hidden-msg"> Please enter a correct email address.</span>
+            <input type="text" class="form-control" name="email" id="user_email" placeholder="my@email.com" onfocus="this.placeholder = ''" onblur="this.placeholder = 'my@email.com'" value=""/>
         </div>
-
-        <button type="submit" class="btn btn-default">SUBSCRIBE NOW</button>
+        <button type="submit" class="btn btn-default">SUBSCRIBE NOW</button> <i class="sending fa fa-spin fa-spinner"></i>
     </form>
-
 </div>
 <div class="contact form-style">
+    <div class="contact-success">
+        <p>
+            Thank you for your message.
+            <br/>
+            We will get back to you as soon as possible.
+        </p>
+    </div>
+    <div class="contact-fail">
+        <p>
+            Something went wrong.
+            <br/>
+            Please try again later.
+        </p>
+    </div>
     <a href="#" class="close-contact">
         <img src="assets/images/txt-close.png" alt="Close"/>
     </a>
     <img src="assets/images/txt-contact-hd.png" alt="Contact"/>
     <form method="post" action="#" id="contact-form">
         <div class="form-group">
-            <input type="text" class="form-control" id="contact_name" placeholder="Your Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'" value=""/>
+            <input type="text" class="form-control" name="name" id="contact_name" placeholder="Your Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'" value=""/>
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" id="contact_email" placeholder="Your Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email'" value=""/>
+            <input type="text" class="form-control" name="email" id="contact_email" placeholder="Your Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email'" value=""/>
         </div>
-        <div class="">
-            <textarea name="" class="form-control" id="contact_msg" rows="4" placeholder="Your message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Message'"></textarea>
+        <div class="form-group">
+            <textarea class="form-control" name="message" id="contact_msg" rows="4" placeholder="Your message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Message'"></textarea>
         </div>
-        <span class="error-msg hidden-msg">All fields are required.</span>
-        <button type="submit" class="btn btn-default">SEND YOUR MESSAGE</button>
+        <button type="submit" class="btn btn-default">SEND YOUR MESSAGE</button> <i class="sending fa fa-spin fa-spinner"></i>
     </form>
+</div>
+<div class="legal-modal">
+    <a href="#" class="close-legal">
+        <img src="assets/images/txt-close.png" alt="Close"/>
+    </a>
+    <h2 class="text-center">Legal</h2>
+    <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+        been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+        galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+        recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
 </div>
 
 <div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
