--- a/index.html
+++ b/index.html
@@ -14,22 +14,18 @@
     <link rel="stylesheet" href="assets/styles/slider.css"/>
     <link rel="stylesheet" href="assets/styles/jquery.jscrollpane.css"/>
     <link rel="stylesheet" href="assets/styles/main.css"/>
-
 </head>
-
-<body>
+<body data-path="home">
 <div class="bg bgh"></div>
 <img class="bg bg1 shown-bg" src="assets/images/bg1-4.png" alt="bg"/>
 <img class="bg bg2" src="assets/images/bg2-4.png" alt="bg"/>
-<img src="assets/images/bg1-brush.png" class="brush shown-brush" alt=""/>
-
+<img src="assets/images/bg1-brush.png" class="brush shown-brush" alt="Brush Overlay"/>
 <div class="mobile-overlay"></div>
-
 <nav class="mobile-nav">
     <div class="inner-header">
         <ul>
             <li class="pull-left active">
-                <a class="logo go t0" href="index.html"><img src="assets/images/sig-1.png" alt="nv3 logo"/></a>
+                <a class="logo go go-home" href="index.html"><img src="assets/images/sig-1.png" alt="nv3 logo"/></a>
             </li>
             <li class="pull-right">
                 <a class="nav-open" href="#">
@@ -43,41 +39,39 @@
         </ul>
     </div>
 </nav>
-
 <div class="mobile-menu">
     <ul>
         <li class="active">
-            <a href="index.html" class="t0 go">Home</a>
+            <a href="#" class="go go-home">Home</a>
         </li>
         <li>
-            <a href="work.html" class="t1 go">Gallery</a>
+            <a href="#" class="go go-gallery">Gallery</a>
         </li>
         <li>
-            <a href="about.html" class="t2 go">About</a>
+            <a href="#" class="go go-about">About</a>
         </li>
         <li>
-            <a href="contact.html" class="t3">Contact</a>
+            <a href="#" class="go-popup go-contact">Contact</a>
         </li>
     </ul>
 </div>
-
 <header class="head0 shown-header">
     <div class="inner-header">
         <ul>
             <li class="active">
-                <a href="#" class="go logo t0"><img src="assets/images/sig-1-bb.png" alt="Strackovski Logo"/></a>
+                <a href="#" class="go logo go-home"><img src="assets/images/sig-1-bb.png" alt="Strackovski Logo"/></a>
             </li>
             <li>
-                <a href="#" class="go t1"><img src="assets/images/txt-gallery-b.png" alt="Gallery"/></a>
+                <a href="#" class="go go-gallery"><img src="assets/images/txt-gallery-b.png" alt="Gallery"/></a>
             </li>
             <li>
-                <a href="#" class="go t2"><img src="assets/images/txt-about-b.png" alt="About"/></a>
+                <a href="#" class="go go-about"><img src="assets/images/txt-about-b.png" alt="About"/></a>
             </li>
             <li class="pull-right">
                 <a href="#" class="stamp-link"><img src="assets/images/behance.png" alt="Behance badge"/></a>
             </li>
             <li class="pull-right">
-                <a href="#" class="t3"><img src="assets/images/txt-contact-b.png" alt="Contact"/></a>
+                <a href="#" class="go-popup go-contact"><img src="assets/images/txt-contact-b.png" alt="Contact"/></a>
             </li>
         </ul>
     </div>
@@ -86,19 +80,19 @@
     <div class="inner-header">
         <ul>
             <li>
-                <a href="#" class="go logo t0"><img src="assets/images/sig-1.png" alt="Strackovski Logo"/></a>
+                <a href="#" class="go logo go-home"><img src="assets/images/sig-1.png" alt="Strackovski Logo"/></a>
             </li>
             <li class="active">
-                <a href="#" class="go t1"><img src="assets/images/txt-gallery-bb.png" alt="Gallery"/></a>
+                <a href="#" class="go go-gallery"><img src="assets/images/txt-gallery-bb.png" alt="Gallery"/></a>
             </li>
             <li>
-                <a href="#" class="go t2"><img src="assets/images/txt-about-b.png" alt="About"/></a>
+                <a href="#" class="go go-about"><img src="assets/images/txt-about-b.png" alt="About"/></a>
             </li>
             <li class="pull-right">
-                <a href="#" class="stamp-link t3"><img src="assets/images/behance.png" alt="Behance badge"/></a>
+                <a href="#" class="stamp-link"><img src="assets/images/behance.png" alt="Behance badge"/></a>
             </li>
             <li class="pull-right">
-                <a href="#" class="t3"><img src="assets/images/txt-contact-b.png" alt="Contact"/></a>
+                <a href="#" class="go-popup go-contact"><img src="assets/images/txt-contact-b.png" alt="Contact"/></a>
             </li>
         </ul>
     </div>
@@ -107,19 +101,19 @@
     <div class="inner-header">
         <ul>
             <li>
-                <a href="#" class="go logo t0"><img src="assets/images/sig-2.png" alt="Strackovski Logo"/></a>
+                <a href="#" class="go logo go-home"><img src="assets/images/sig-2.png" alt="Strackovski Logo"/></a>
             </li>
             <li>
-                <a href="#" class="go t1"><img src="assets/images/txt-gallery-g.png" alt="Gallery"/></a>
+                <a href="#" class="go go-gallery"><img src="assets/images/txt-gallery-g.png" alt="Gallery"/></a>
             </li>
             <li class="active">
-                <a href="#" class="go t2"><img src="assets/images/txt-about-gg.png" alt="About"/></a>
+                <a href="#" class="go go-about"><img src="assets/images/txt-about-gg.png" alt="About"/></a>
             </li>
             <li class="pull-right">
-                <a href="#" class="stamp-link t3"><img src="assets/images/behance.png" alt="Behance badge"/></a>
+                <a href="#" class="stamp-link"><img src="assets/images/behance.png" alt="Behance badge"/></a>
             </li>
             <li class="pull-right">
-                <a href="#" class="t3"><img src="assets/images/txt-contact-g.png" alt="Contact"/></a>
+                <a href="#" class="go-popup go-contact"><img src="assets/images/txt-contact-g.png" alt="Contact"/></a>
             </li>
         </ul>
     </div>
@@ -179,7 +173,7 @@
             <div class="col-sm-3 col-xs-6">
                 <div class="thumb">
                     <img src="assets/images/gent1.jpg" alt="img"/>
-                    <div class="preview" data-title="kakak">
+                    <div class="preview" data-title="3">
                         <i class="fa fa-search fa-2x"></i>
                     </div>
                 </div>
@@ -187,7 +181,7 @@
             <div class="col-sm-3 col-xs-6">
                 <div class="thumb">
                     <img src="assets/images/gent1.jpg" alt="img"/>
-                    <div class="preview" data-title="pappa">
+                    <div class="preview" data-title="4">
                         <i class="fa fa-search fa-2x"></i>
                     </div>
                 </div>
@@ -195,7 +189,7 @@
             <div class="col-sm-3 col-xs-6">
                 <div class="thumb">
                     <img src="assets/images/gent1.jpg" alt="img"/>
-                    <div class="preview" data-title="pappa">
+                    <div class="preview" data-title="5">
                         <i class="fa fa-search fa-2x"></i>
                     </div>
                 </div>
@@ -203,7 +197,7 @@
             <div class="col-sm-3 col-xs-6">
                 <div class="thumb">
                     <img src="assets/images/gent1.jpg" alt="img"/>
-                    <div class="preview" data-title="pappa">
+                    <div class="preview" data-title="6">
                         <i class="fa fa-search fa-2x"></i>
                     </div>
                 </div>
@@ -265,18 +259,18 @@
             <div class="col-xs-4 footer-nav">
                 <ul>
                     <li>
-                        <a href="#" class="go t1">Gallery</a>
+                        <a href="#" class="go go-gallery">Gallery</a>
                     </li>
                     <li>
-                        <a href="#" class="go t2">About</a>
+                        <a href="#" class="go go-about">About</a>
                     </li>
                     <li>
-                        <a href="#" class="t3">Contact</a>
+                        <a href="#" class="go-popup go-contact">Contact</a>
                     </li>
                 </ul>
             </div>
             <div class="col-xs-4 text-center">
-                <a href="#" class="open_signup">
+                <a href="#" class="go-popup go-signup">
                 <i class="fa fa-angle-up fa-2x"></i>
                 <br/>
                 GET NOTIFIED
@@ -288,14 +282,13 @@
                 </a>
             </div>
             <div class="col-xs-4 text-right">
-
                 <img class="stamp stamp1 shown-stamp" src="assets/images/logo-stamp.png" alt="Logo Stamp"/>
                 <img class="stamp stamp2" src="assets/images/logo-stamp2.png" alt="Logo Stamp"/>
                 <div class="legal selective">
                     <p>
                         Copyright 2015 Stevo Strackovski
                     </p>
-                    <p><a href="#" class="t4">Legal</a></p>
+                    <p><a href="#" class="go-popup go-legal">Legal</a></p>
                 </div>
             </div>
         </div>
@@ -324,7 +317,7 @@
             Please try again later.
         </p>
     </div>
-    <a href="#" class="close_signup">
+    <a href="#" class="close-popup close-signup">
         <i class="fa fa-angle-down fa-2x"></i>
     </a>
     <span>
@@ -355,7 +348,7 @@
             Please try again later.
         </p>
     </div>
-    <a href="#" class="close-contact">
+    <a href="#" class="close-popup close-contact">
         <img src="assets/images/txt-close.png" alt="Close"/>
     </a>
     <img src="assets/images/txt-contact-hd.png" alt="Contact"/>
@@ -373,7 +366,7 @@
     </form>
 </div>
 <div class="legal-modal">
-    <a href="#" class="close-legal">
+    <a href="#" class="close-popup close-legal">
         <img src="assets/images/txt-close.png" alt="Close"/>
     </a>
     <h2 class="text-center">Legal</h2>
@@ -386,7 +379,6 @@
         recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
 </div>
-
 <div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -395,25 +387,23 @@
             </div>
         </div>
     </div>
-
     <div class="modal-footer">
         <div class="col-xs-4">i</div>
-        <div class="col-xs-4 title"></div>
-        <div class="col-xs-4"><a href="#" class="popover-link" data-toggle="popover" title="Share this" data-content="Share links..."><i class="fa fa-share"></i></a></div>
+        <div class="col-xs-4 text-center title"></div>
+        <div class="col-xs-4 text-right"><a href="#" class="popover-link" data-toggle="popover" title="Share this" data-content="Share links..."><i class="fa fa-share"></i></a></div>
     </div>
 
-    <div class="modal-close" data-dismiss="modal"><span>Escape to close</div>
+    <div class="modal-close" data-dismiss="modal"><span>Escape to close</span></div>
     <div class="modal-prev modal-controls"><i class="fa fa-angle-left fa-4x"></i></div>
     <div class="modal-next modal-controls"><i class="fa fa-angle-right fa-4x"></i></div>
 </div>
-
 <script type="text/javascript" src="assets/scripts/jquery-1.11.1.js"></script>
 <script type="text/javascript" src="assets/scripts/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="assets/scripts/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="assets/scripts/jquery.contentcarousel.js"></script>
 <script type="text/javascript" src="assets/scripts/bootstrap.js"></script>
+<script type="text/javascript" src="http://browserstate.github.io/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
 <script type="text/javascript" src="assets/scripts/main.js"></script>
 <script type="text/javascript" src="assets/scripts/jquery.mobile.custom.js"></script>
-
 </body>
 </html>
